--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
