--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.0",
     "formik": "^2.4.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
